--- a/addon/options.html
+++ b/addon/options.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="options.css">
   </head>
-
   <body>
-
-    <form>
-        <label>Border color<input type="text" id="color" ></label>
-        <button type="submit">Save</button>
-    </form>
-
+    <hr>
+    <div>
+      <h1>Settings</h1>
+    </div>
+    <div class="main">
+      <form>
+        <div class="row">
+          <div class="col-4">
+            <label for="qualitySelect" id="qualityLabel">Stream quality : </label><br/>
+            <span id="qualityDetail"></span>
+          </div>
+          <div class="col-8">
+            <select id="qualitySelect" >
+              <option>456</option>
+              <option>2423</option>
+              <option>142</option>
+              <option>25</option>
+            <select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <button type="submit" id="submit">Save</button>
+          </div>
+        </div>
+      </form>
+    </div>
     <script src="options.js"></script>
-
   </body>
-
 </html>
+
+
+<div class="row">
+
+<div class="col-3 menu">
+  <ul>
+    <li>The Flight</li>
+    <li>The City</li>
+    <li>The Island</li>
+    <li>The Food</li>
+  </ul>
+</div>
+
+<div class="col-9">
+  <h1>The City</h1>
+  <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+  <p>Resize the browser window to see how the content respond to the resizing.</p>
+</div>
+
+</div>
