--- a/addon/options.html
+++ b/addon/options.html
@@ -7,7 +7,7 @@
   <body>
     <hr>
     <div>
-      <h1>Settings</h1>
+      <h1 id="title">Settings</h1>
     </div>
     <div class="main">
       <form>
@@ -17,12 +17,7 @@
             <span id="qualityDetail"></span>
           </div>
           <div class="col-8">
-            <select id="qualitySelect" >
-              <option>456</option>
-              <option>2423</option>
-              <option>142</option>
-              <option>25</option>
-            <select>
+            <select id="qualitySelect"></select>
           </div>
         </div>
         <div class="row">
@@ -35,23 +30,3 @@
     <script src="options.js"></script>
   </body>
 </html>
-
-
-<div class="row">
-
-<div class="col-3 menu">
-  <ul>
-    <li>The Flight</li>
-    <li>The City</li>
-    <li>The Island</li>
-    <li>The Food</li>
-  </ul>
-</div>
-
-<div class="col-9">
-  <h1>The City</h1>
-  <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-  <p>Resize the browser window to see how the content respond to the resizing.</p>
-</div>
-
-</div>
